--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,10 +3,9 @@ name = "rusty_3d_game"
 version = "0.1.0"
 authors = ["Speedy Consoles <rubihome@gmx.de>"]
 
+[workspace]
+
 [dependencies]
-glium = "0.20.0"
-cgmath = "0.16.0"
-toml = "0.4.5"
-strum = "0.8.0"
-strum_macros = "0.8.0"
-num = "0.1.41"
+server = { path = "server" }
+client = { path = "client" }
+shared = { path = "shared" }
