--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -7,7 +7,7 @@ authors = ["Speedy Consoles <rubihome@gmx.de>"]
 toml = "0.4.5"
 cgmath = "0.16.0"
 newtype_derive = "0.1.6"
-custom_derive = "0.1.7"
+macro-attr = "0.2.0"
 bincode = "1.0.0"
 serde = "1.0.27"
 serde_derive = "1.0.27"
