--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["Speedy Consoles <rubihome@gmx.de>"]
 [dependencies]
 shared = { path = "../shared" }
 glium = "0.20.0"
+glium_text = { git = "https://github.com/tomaka/glium_text", version = "0.11.0"}
 cgmath = "0.16.0"
 toml = "0.4.5"
 strum = "0.8.0"
